Man writer: use \f[R] instead of \f[] to reset font
Fixes #4973

--- a/test/command/3568.md
+++ b/test/command/3568.md
@@ -7,9 +7,10 @@ normal **bold `code` more bold** normal.
 normal `code` normal.
 ^D
 .PP
-normal \f[I]italic \f[BI]bold in the middle\f[I] only italic\f[] normal.
+normal \f[I]italic \f[BI]bold in the middle\f[I] only italic\f[R]
+normal.
 .PP
-normal \f[B]bold \f[BC]code\f[B] more bold\f[] normal.
+normal \f[B]bold \f[BC]code\f[B] more bold\f[R] normal.
 .PP
-normal \f[C]code\f[] normal.
+normal \f[C]code\f[R] normal.
 ```
