Man reader: support UR/UE, MT/ME for links.
Closes #4989.

--- a/test/man-reader.man
+++ b/test/man-reader.man
@@ -197,3 +197,13 @@ Plus: +
 .PP
 Minus: \-
 .PP
+.SH Links
+.PP
+.UR http://\:example.com
+some random
+site
+.UE
+.PP
+.MT me@example.com
+my email address.
+.ME
