Man reader: move macro resolution to lexer phase.
We also introduce a new type ManTokens (a sequence of tokens)
and remove MComment.  This allows lexers to return empty strings
of tokens, or multiple tokens (as when macros are resolved).

One test still fails.  This needs to be fixed by moving handling
of .BI, .I, etc. to the parsing phase.

--- a/test/man-reader.man
+++ b/test/man-reader.man
@@ -207,3 +207,15 @@ site
 .MT me@example.com
 my email address.
 .ME
+.SH Macros
+.de au
+.B
+Me Myself
+..
+.de auth !!
+.I
+The author is \$1.
+.!!
+.au
+and I.
+.auth "John Jones"
