Man reader: support .ds, .ds1; also fix macro arguments.
Closes #4997.

--- a/test/man-reader.man
+++ b/test/man-reader.man
@@ -214,8 +214,10 @@ Me Myself
 ..
 .de auth !!
 .I
-The author is \$1.
+The author is \\$1.
 .!!
 .au
 and I.
 .auth "John Jones"
+.ds me The \f[B]Author\f[R]
+It's \*(me.
