--- a/test/man-reader.man
+++ b/test/man-reader.man
@@ -221,3 +221,154 @@ and I.
 .auth "John Jones"
 .ds me The \f[B]Author\f[R]
 It's \*(me.
+.SH Tables
+.TS
+tab(@);
+r l c l.
+T{
+Right
+T}@T{
+Left
+T}@T{
+Center
+T}@T{
+Default
+T}
+_
+T{
+12
+T}@T{
+12
+T}@T{
+12
+T}@T{
+12
+T}
+T{
+123
+T}@T{
+123
+T}@T{
+123
+T}@T{
+123
+T}
+T{
+1
+T}@T{
+1
+T}@T{
+1
+T}@T{
+1
+T}
+.TE
+.TS
+allbox tab(;);
+rlcl.
+T{
+Right
+T};T{
+Left
+T};T{
+Center
+T};T{
+Left
+\f[I]more\f[R]
+T}
+_
+T{
+12
+T};T{
+12
+T};T{
+12
+T};T{
+12
+T}
+T{
+123
+T};T{
+123
+T};T{
+123
+T};T{
+123
+T}
+T{
+1
+T};T{
+1
+T};T{
+1
+T};T{
+1
+T}
+.TE
+.TS
+tab(@);
+cw(10.5n) lw(9.6n) rw(11.4n) lw(24.5n).
+T{
+Centered Header
+T}@T{
+Left Aligned
+T}@T{
+Right Aligned
+T}@T{
+Default aligned
+T}
+_
+T{
+First
+T}@T{
+row
+T}@T{
+12.0
+T}@T{
+Example of a row that spans multiple lines.
+T}
+T{
+Second
+T}@T{
+row
+T}@T{
+5.0
+T}@T{
+Here\[cq]s another one.
+Note the blank line between rows.
+T}
+.TE
+.PP
+Table without column headers:
+.PP
+.TS
+tab(@);
+r l c r.
+T{
+12
+T}@T{
+12
+T}@T{
+12
+T}@T{
+12
+T}
+T{
+123
+T}@T{
+123
+T}@T{
+123
+T}@T{
+123
+T}
+T{
+1
+T}@T{
+1
+T}@T{
+1
+T}@T{
+1
+T}
+.TE
